Fix button breakpoints on mobile

--- a/frontend/src/components/QuestionView.module.css
+++ b/frontend/src/components/QuestionView.module.css
@@ -6,19 +6,32 @@
     margin-right: 1em;
 }
 
-.feedback {
-    width: 100%;
-}
-
-.feedback:first-child {
-    margin-left: 1.5em;
-}
-
-.feedback:last-child {
-    float: right;
-}
-
-.feedback button {
+.feedback button:not(:first-child) {
     width: fit-content;
     margin-left: 0.75em;
+}
+
+@media screen and (min-width: 30em) {
+    .feedback:first-child {
+        margin-left: 1.5em;
+    }
+
+    .feedback button {
+        width: fit-content;
+        margin-left: 0.75em;
+    }
+
+    .feedback {
+        width: 100%;
+    }
+
+    .feedback:last-child {
+        float: right;
+    }
+}
+
+@media screen and (max-width: 30em) {
+    .feedback {
+        margin-bottom: 0.5em;
+    }
 }
