--- a/frontend/src/components/fields/Shared.module.css
+++ b/frontend/src/components/fields/Shared.module.css
@@ -1,3 +1,5 @@
-.control {
-    margin-bottom: 1em;
+@media screen and (min-width: 30em) {
+    .control {
+        margin-bottom: 1em;
+    }
 }
